# project-blockchain-contract

./: Cargo.toml  README.md
meta/: Cargo.toml
meta/src/: main.rs
output/: blockchain-contract.imports.json  blockchain-contract.mxsc.json
scenarios/: blockchain_contract.scen.json
scripts/: add_admin.sh  approve_release.sh  config.sh  contract_address.txt  get_admins.sh  get_all_releases.sh  get_release.sh  get_required_approvals.sh  get_slots.sh  propose_release.sh  reject_release.sh  remove_admin.sh  set_required_approvals.sh  wallet.pem
scripts/admin-wallets/: 0.pem  1.pem
src/: blockchain_contract.rs
tests/: blockchain_contract_scenario_go_test.rs  blockchain_contract_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
